--- a/indexCascadingStylingSheets.css
+++ b/indexCascadingStylingSheets.css
@@ -22,7 +22,7 @@
             color: #FF69B4;
             font-size: 64px;
             margin: 20px;
-			text-shadow: 0 4px 8px rgba(255, 105, 180, .7);
+			text-shadow: 0 4px 8px rgba(255, 0, 128, 0.7);
 			letter-spacing: 5px;
         }
 		h2 {
