--- a/indexCascadingStylingSheets.css
+++ b/indexCascadingStylingSheets.css
@@ -151,6 +151,7 @@
 		input {
 			height: 40px;
                         width: 95%;
+                        font-size: 16px;
 		}
 		textarea {
 			resize: none;
