--- a/indexCascadingStylingSheets.css
+++ b/indexCascadingStylingSheets.css
@@ -150,8 +150,9 @@
         }
 		input {
 			height: 40px;
-                        width: 94%;
                         font-size: 16px;
+                        padding: 2px;
+                        margin: 0px;
 		}
 		textarea {
 			resize: none;
