--- a/indexCascadingStylingSheets.css
+++ b/indexCascadingStylingSheets.css
@@ -150,6 +150,7 @@
         }
 		input {
 			height: 40px;
+                        width: 100%;
                         font-size: 16px;
                         padding: 2px;
                         margin: 0px;
