--- a/indexCascadingStylingSheets.css
+++ b/indexCascadingStylingSheets.css
@@ -148,6 +148,17 @@
             right: 10px;
             cursor: pointer;
         }
+        .popupQR {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
         .overlay {
             display: none;
             position: fixed;
